--- a/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
@@ -1,5 +1,5 @@
 {
-.appVersion = "3337";
+.appVersion = "3341";
 .formatVersion = 3;
 axes = (
 {
@@ -6917,6 +6917,7 @@ kerningLTR = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 5;
 "@MMK_R_Ia-cy" = 30;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -7564,6 +7565,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -10;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -20;
@@ -7593,7 +7595,9 @@ ampersand = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -35;
 "@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -5;
 "@MMK_R_Zhe-cy" = -30;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
@@ -7645,6 +7649,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -70;
 "@MMK_R_U-cy" = -100;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -7668,6 +7673,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -60;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_O" = -20;
+"@MMK_R_U-cy" = 10;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -7728,6 +7734,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -40;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 10;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -7844,7 +7851,7 @@ germandbls.sc = -30;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -50;
 "@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -20;
+"@MMK_R_O" = -30;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_a-cy" = -20;
@@ -8799,6 +8806,7 @@ UUID0 = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 5;
 "@MMK_R_Ia-cy" = 35;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -9445,6 +9453,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -30;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -10;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -20;
@@ -9474,7 +9483,9 @@ ampersand = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -40;
 "@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -10;
 "@MMK_R_Zhe-cy" = -30;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
@@ -9526,6 +9537,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -80;
 "@MMK_R_U-cy" = -120;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -9549,6 +9561,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -60;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_O" = -20;
+"@MMK_R_U-cy" = 15;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -9609,6 +9622,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -40;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 15;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -9728,7 +9742,7 @@ germandbls.sc = -30;
 "@MMK_R_E-cy" = -10;
 "@MMK_R_Ef-cy" = -50;
 "@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -20;
+"@MMK_R_O" = -30;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_a-cy" = -20;
 "@MMK_R_be-cy" = -10;
@@ -10680,6 +10694,7 @@ ymod = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 15;
 "@MMK_R_Ia-cy" = 30;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -10789,7 +10804,7 @@ underscore = 30;
 "@MMK_L_Ef-cy" = {
 "@MMK_R_Che-cy" = -30;
 "@MMK_R_De-cy" = -50;
-"@MMK_R_El-cy" = -30;
+"@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_T" = -20;
 "@MMK_R_U-cy" = -90;
@@ -11328,11 +11343,12 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -20;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -30;
-"@MMK_R_Zhe-cy" = -15;
+"@MMK_R_Zhe-cy" = -25;
 "@MMK_R_a.sc" = -20;
 "@MMK_R_ae.sc" = -30;
 "@MMK_R_period" = -20;
@@ -11357,7 +11373,9 @@ ampersand = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -50;
 "@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -10;
 "@MMK_R_Zhe-cy" = -30;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
@@ -11409,6 +11427,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -70;
 "@MMK_R_U-cy" = -90;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -11432,6 +11451,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -70;
 "@MMK_R_El-cy" = -70;
 "@MMK_R_O" = -20;
+"@MMK_R_U-cy" = 20;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -11492,6 +11512,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -80;
 "@MMK_R_Ia-cy" = -40;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 20;
 "@MMK_R_Zhe-cy" = 15;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -11605,11 +11626,11 @@ germandbls.sc = -30;
 "@MMK_R_y.sc" = -20;
 };
 "@MMK_L_Zhe-cy" = {
-"@MMK_R_Che-cy" = -25;
+"@MMK_R_Che-cy" = -35;
 "@MMK_R_E-cy" = -10;
-"@MMK_R_Ef-cy" = -50;
+"@MMK_R_Ef-cy" = -60;
 "@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -25;
+"@MMK_R_O" = -60;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Ze-cy" = -15;
 "@MMK_R_a-cy" = -20;
@@ -12556,6 +12577,7 @@ ymod = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 15;
 "@MMK_R_Ia-cy" = 15;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -13212,6 +13234,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -5;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -10;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -10;
@@ -13243,6 +13266,7 @@ period = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -25;
 "@MMK_R_U-cy" = -20;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_a-cy" = -50;
@@ -13294,6 +13318,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -70;
 "@MMK_R_U-cy" = -80;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -13317,6 +13342,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -50;
 "@MMK_R_El-cy" = -50;
 "@MMK_R_O" = -5;
+"@MMK_R_U-cy" = 10;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -13380,6 +13406,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -50;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 10;
 "@MMK_R_Zhe-cy" = 10;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -13501,9 +13528,9 @@ germandbls.sc = -30;
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_De-cy" = 10;
 "@MMK_R_E-cy" = -10;
-"@MMK_R_Ef-cy" = -50;
-"@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -20;
+"@MMK_R_Ef-cy" = -60;
+"@MMK_R_El-cy" = 15;
+"@MMK_R_O" = -30;
 "@MMK_R_U-cy" = 20;
 "@MMK_R_Ze-cy" = -5;
 "@MMK_R_a-cy" = -20;
@@ -14490,6 +14517,7 @@ ymod = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 15;
 "@MMK_R_Ia-cy" = 35;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -15143,6 +15171,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -15;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -10;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -10;
@@ -15172,7 +15201,9 @@ ampersand = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -40;
 "@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -5;
 "@MMK_R_Zhe-cy" = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
@@ -15223,6 +15254,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -70;
 "@MMK_R_U-cy" = -80;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -15246,6 +15278,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -60;
 "@MMK_R_El-cy" = -50;
 "@MMK_R_O" = -5;
+"@MMK_R_U-cy" = 20;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -15309,6 +15342,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 20;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -15427,9 +15461,9 @@ germandbls.sc = -30;
 "@MMK_L_Zhe-cy" = {
 "@MMK_R_Che-cy" = -20;
 "@MMK_R_E-cy" = -10;
-"@MMK_R_Ef-cy" = -50;
+"@MMK_R_Ef-cy" = -60;
 "@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -20;
+"@MMK_R_O" = -30;
 "@MMK_R_U-cy" = -5;
 "@MMK_R_Ze-cy" = -10;
 "@MMK_R_a-cy" = -20;
@@ -16406,6 +16440,7 @@ ymod = {
 "@MMK_R_Dje-cy" = -60;
 "@MMK_R_E-cy" = -20;
 "@MMK_R_Ef-cy" = -20;
+"@MMK_R_El-cy" = 10;
 "@MMK_R_Ia-cy" = 35;
 "@MMK_R_Komide-cy" = -20;
 "@MMK_R_Komizje-cy" = -60;
@@ -16516,7 +16551,7 @@ underscore = 30;
 "@MMK_L_Ef-cy" = {
 "@MMK_R_Che-cy" = -30;
 "@MMK_R_De-cy" = -50;
-"@MMK_R_El-cy" = -30;
+"@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_T" = -20;
 "@MMK_R_U-cy" = -70;
@@ -17063,11 +17098,12 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -20;
 "@MMK_R_El-cy" = -20;
 "@MMK_R_T" = -20;
+"@MMK_R_U-cy" = -15;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_X" = -10;
 "@MMK_R_Y" = -20;
-"@MMK_R_Zhe-cy" = -10;
+"@MMK_R_Zhe-cy" = -20;
 "@MMK_R_a.sc" = -20;
 "@MMK_R_ae.sc" = -30;
 "@MMK_R_period" = -20;
@@ -17092,7 +17128,9 @@ ampersand = -20;
 "@MMK_R_A" = -50;
 "@MMK_R_AE" = -80;
 "@MMK_R_De-cy" = -70;
+"@MMK_R_El-cy" = -40;
 "@MMK_R_U-cy" = -20;
+"@MMK_R_Ze-cy" = -15;
 "@MMK_R_Zhe-cy" = -30;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
@@ -17143,6 +17181,7 @@ ampersand = -20;
 "@MMK_R_Dje-cy" = -40;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = -10;
+"@MMK_R_T" = -60;
 "@MMK_R_U-cy" = -80;
 "@MMK_R_Zhe-cy" = -10;
 "@MMK_R_che-cy" = -30;
@@ -17166,6 +17205,7 @@ underscore = -10;
 "@MMK_R_De-cy" = -60;
 "@MMK_R_El-cy" = -50;
 "@MMK_R_O" = -5;
+"@MMK_R_U-cy" = 20;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
@@ -17229,6 +17269,7 @@ ampersand = -20;
 "@MMK_R_El-cy" = -60;
 "@MMK_R_Ia-cy" = -30;
 "@MMK_R_O" = -20;
+"@MMK_R_T" = 20;
 "@MMK_R_Zhe-cy" = 5;
 "@MMK_R_a" = -60;
 "@MMK_R_a-cy" = -40;
@@ -17346,11 +17387,10 @@ germandbls.sc = -30;
 "@MMK_R_y.sc" = -20;
 };
 "@MMK_L_Zhe-cy" = {
-"@MMK_R_Che-cy" = -20;
+"@MMK_R_Che-cy" = -40;
 "@MMK_R_E-cy" = -10;
-"@MMK_R_Ef-cy" = -50;
-"@MMK_R_El-cy" = 10;
-"@MMK_R_O" = -20;
+"@MMK_R_Ef-cy" = -60;
+"@MMK_R_O" = -60;
 "@MMK_R_Ze-cy" = -25;
 "@MMK_R_a-cy" = -20;
 "@MMK_R_be-cy" = -10;
