[Serif Italic] CYR Kerning Update

--- a/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
+++ b/sources/NotoSerif-Italic.glyphspackage/fontinfo.plist
@@ -6934,9 +6934,12 @@ kerningLTR = {
 "@MMK_R_Ze-cy" = -25;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -20;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -50;
 "@MMK_R_copyright" = -50;
+"@MMK_R_el-cy" = 10;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -20;
@@ -6970,6 +6973,7 @@ v = -60;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -40;
 "@MMK_R_Z" = -20;
+"@MMK_R_ia-cy" = -10;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_w" = -10;
 "@MMK_R_y" = -20;
@@ -6982,9 +6986,9 @@ v = -60;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -5;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
+"@MMK_R_el-cy" = -5;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -20;
@@ -7010,10 +7014,11 @@ ampersand = -20;
 };
 "@MMK_L_De-cy" = {
 "@MMK_R_Ef-cy" = -20;
-"@MMK_R_el-cy" = -20;
+"@MMK_R_el-cy" = 0;
 "@MMK_R_ge-cy" = -10;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -25;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 20;
 "@MMK_R_ze-cy" = -10;
@@ -7604,7 +7609,8 @@ ampersand = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
-"@MMK_R_el-cy" = -50;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_el-cy" = -30;
 "@MMK_R_period" = -120;
 ampersand = -20;
 };
@@ -7680,8 +7686,12 @@ underscore = -10;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_el-cy" = -10;
+"@MMK_R_ia-cy" = -40;
 "@MMK_R_o" = -50;
 "@MMK_R_period" = -90;
+"@MMK_R_u-cy" = 20;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -7750,7 +7760,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_period" = -110;
 "@MMK_R_quoteright" = 40;
@@ -7811,7 +7821,9 @@ germandbls.sc = -30;
 "@MMK_L_X" = {
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
+"@MMK_R_che-cy" = -40;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 5;
 "@MMK_R_o" = -10;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
@@ -8308,9 +8320,11 @@ ampersand.sc = -10;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 30;
 "@MMK_R_el-cy" = 40;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_parenright" = 40;
+"@MMK_R_period" = 40;
 "@MMK_R_quoteleft" = -20;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_seven" = -10;
@@ -8318,6 +8332,7 @@ ampersand.sc = -10;
 "@MMK_R_two" = 10;
 "@MMK_R_x" = 15;
 "@MMK_R_zhe-cy" = 20;
+slash = 80;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -8340,7 +8355,7 @@ underscore = 80;
 "@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -10;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -60;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_ze-cy" = -10;
@@ -8850,9 +8865,12 @@ UUID0 = {
 "@MMK_R_Ze-cy" = -30;
 "@MMK_R_Zhe-cy" = 30;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -20;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -50;
 "@MMK_R_copyright" = -50;
+"@MMK_R_el-cy" = 10;
+"@MMK_R_hardsign-cy" = -15;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -20;
@@ -8897,11 +8915,10 @@ v = -60;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
+"@MMK_R_hyphen" = 20;
 "@MMK_R_ia-cy" = -20;
 "@MMK_R_question" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -8925,12 +8942,13 @@ ampersand = -20;
 };
 "@MMK_L_De-cy" = {
 "@MMK_R_Ef-cy" = -20;
-"@MMK_R_el-cy" = -20;
 "@MMK_R_ge-cy" = -10;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -30;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 20;
+"@MMK_R_u-cy" = 10;
 "@MMK_R_ze-cy" = -10;
 underscore = 30;
 };
@@ -9519,7 +9537,8 @@ ampersand = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
-"@MMK_R_el-cy" = -50;
+"@MMK_R_che-cy" = 10;
+"@MMK_R_el-cy" = -30;
 "@MMK_R_period" = -120;
 ampersand = -20;
 };
@@ -9595,8 +9614,12 @@ underscore = -10;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = -10;
+"@MMK_R_ia-cy" = -20;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -90;
+"@MMK_R_u-cy" = 60;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -9665,7 +9688,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_parenright" = 10;
 "@MMK_R_period" = -110;
@@ -9729,7 +9752,9 @@ germandbls.sc = -30;
 "@MMK_L_X" = {
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
+"@MMK_R_che-cy" = -30;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 5;
 "@MMK_R_o" = -10;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
@@ -10226,6 +10251,7 @@ ampersand.sc = -10;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 20;
 "@MMK_R_el-cy" = 40;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_ia-cy" = 15;
@@ -10238,6 +10264,7 @@ ampersand.sc = -10;
 "@MMK_R_two" = 10;
 "@MMK_R_x" = 10;
 "@MMK_R_zhe-cy" = 20;
+slash = 80;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -10260,7 +10287,7 @@ underscore = 80;
 "@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -15;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -60;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_ze-cy" = -15;
@@ -10769,9 +10796,12 @@ ymod = {
 "@MMK_R_Ze-cy" = -30;
 "@MMK_R_Zhe-cy" = 25;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -20;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -50;
 "@MMK_R_copyright" = -50;
+"@MMK_R_el-cy" = 15;
+"@MMK_R_hardsign-cy" = -20;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -20;
@@ -10804,6 +10834,7 @@ v = -60;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -40;
 "@MMK_R_Z" = -20;
+"@MMK_R_che-cy" = 20;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_w" = -10;
 "@MMK_R_y" = -20;
@@ -10815,11 +10846,12 @@ v = -60;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_be-cy" = 5;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
+"@MMK_R_el-cy" = 5;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
+"@MMK_R_hyphen" = 20;
 "@MMK_R_ia-cy" = -20;
 "@MMK_R_question" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -10829,6 +10861,8 @@ underscore = -10;
 };
 "@MMK_L_C" = {
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = 20;
 ampersand = -20;
 };
 "@MMK_L_Cheabkhasian-cy" = {
@@ -10846,12 +10880,14 @@ ampersand = -20;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = 15;
 "@MMK_R_Zhe-cy" = 10;
-"@MMK_R_el-cy" = 0;
+"@MMK_R_el-cy" = 10;
 "@MMK_R_ge-cy" = -10;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -20;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 50;
+"@MMK_R_u-cy" = 15;
 "@MMK_R_ze-cy" = -10;
 underscore = 30;
 };
@@ -10859,6 +10895,7 @@ underscore = 30;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_Y" = -20;
+"@MMK_R_che-cy" = 15;
 };
 "@MMK_L_Ef-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -11440,6 +11477,7 @@ ampersand = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
+"@MMK_R_che-cy" = 30;
 "@MMK_R_el-cy" = -50;
 "@MMK_R_period" = -120;
 ampersand = -20;
@@ -11516,8 +11554,12 @@ underscore = -10;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 40;
+"@MMK_R_el-cy" = -10;
+"@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -90;
+"@MMK_R_u-cy" = 70;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -11586,7 +11628,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_parenright" = 20;
 "@MMK_R_period" = -110;
@@ -11650,7 +11692,9 @@ germandbls.sc = -30;
 "@MMK_L_X" = {
 "@MMK_R_O" = -20;
 "@MMK_R_S" = -10;
+"@MMK_R_che-cy" = -10;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 15;
 "@MMK_R_o" = -10;
 "@MMK_R_w" = -30;
 "@MMK_R_y" = -50;
@@ -12146,6 +12190,7 @@ ampersand.sc = -10;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 20;
 "@MMK_R_el-cy" = 45;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_hardsign-cy" = -10;
@@ -12159,6 +12204,7 @@ ampersand.sc = -10;
 "@MMK_R_x" = 20;
 "@MMK_R_ze-cy" = 15;
 "@MMK_R_zhe-cy" = 20;
+slash = 80;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -12181,7 +12227,7 @@ underscore = 80;
 "@MMK_R_n" = -30;
 "@MMK_R_o" = -35;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -50;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_u" = -30;
@@ -12689,9 +12735,11 @@ ymod = {
 "@MMK_R_Ze-cy" = -20;
 "@MMK_R_Zhe-cy" = 20;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -10;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -50;
 "@MMK_R_copyright" = -50;
+"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -10;
@@ -12723,6 +12771,7 @@ v = -45;
 "@MMK_R_W" = -30;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -40;
+"@MMK_R_ia-cy" = -5;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_w" = -10;
 "@MMK_R_y" = -20;
@@ -12735,9 +12784,8 @@ v = -45;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
+"@MMK_R_el-cy" = -10;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -20;
@@ -12750,6 +12798,8 @@ underscore = -10;
 "@MMK_L_C" = {
 "@MMK_R_O" = -10;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = 10;
 ampersand = -20;
 };
 "@MMK_L_Cheabkhasian-cy" = {
@@ -12764,10 +12814,9 @@ ampersand = -20;
 };
 "@MMK_L_De-cy" = {
 "@MMK_R_Ef-cy" = -20;
-"@MMK_R_el-cy" = -20;
 "@MMK_R_ge-cy" = -10;
-"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -15;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 20;
 "@MMK_R_ze-cy" = -10;
@@ -13368,7 +13417,8 @@ period = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
-"@MMK_R_el-cy" = -50;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = -35;
 "@MMK_R_period" = -120;
 ampersand = -20;
 };
@@ -13443,9 +13493,13 @@ underscore = -10;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 30;
+"@MMK_R_el-cy" = -10;
+"@MMK_R_ia-cy" = -20;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -80;
 "@MMK_R_quoteright" = 40;
+"@MMK_R_u-cy" = 40;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -13516,7 +13570,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_parenright" = 20;
 "@MMK_R_period" = -110;
@@ -13582,7 +13636,9 @@ germandbls.sc = -30;
 "@MMK_L_X" = {
 "@MMK_R_O" = -10;
 "@MMK_R_S" = -10;
+"@MMK_R_che-cy" = -10;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 10;
 "@MMK_R_o" = -10;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w" = -30;
@@ -14107,11 +14163,13 @@ question.sc = 30;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 30;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = 15;
 "@MMK_R_parenright" = 40;
+"@MMK_R_period" = 20;
 "@MMK_R_quoteleft" = -20;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_seven" = -10;
@@ -14119,6 +14177,7 @@ question.sc = 30;
 "@MMK_R_two" = 10;
 "@MMK_R_ze-cy" = 10;
 "@MMK_R_zhe-cy" = 20;
+slash = 60;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -14141,7 +14200,7 @@ underscore = 80;
 "@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -25;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -50;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_ze-cy" = -10;
@@ -14666,9 +14725,12 @@ ymod = {
 "@MMK_R_Ze-cy" = -20;
 "@MMK_R_Zhe-cy" = 30;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -5;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -50;
 "@MMK_R_copyright" = -50;
+"@MMK_R_el-cy" = 10;
+"@MMK_R_hardsign-cy" = -5;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -10;
@@ -14700,6 +14762,7 @@ v = -45;
 "@MMK_R_W" = -30;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -40;
+"@MMK_R_hardsign-cy" = 5;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_w" = -10;
 "@MMK_R_y" = -20;
@@ -14711,11 +14774,12 @@ v = -45;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_be-cy" = 15;
+"@MMK_R_che-cy" = 5;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
+"@MMK_R_hyphen" = 20;
 "@MMK_R_ia-cy" = -20;
 "@MMK_R_question" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -14726,6 +14790,8 @@ underscore = -10;
 "@MMK_L_C" = {
 "@MMK_R_O" = -10;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = 20;
 ampersand = -20;
 };
 "@MMK_L_Cheabkhasian-cy" = {
@@ -14741,12 +14807,12 @@ ampersand = -20;
 "@MMK_L_De-cy" = {
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = 20;
-"@MMK_R_el-cy" = -20;
 "@MMK_R_ge-cy" = -10;
-"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -15;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 20;
+"@MMK_R_u-cy" = 10;
 "@MMK_R_ze-cy" = -10;
 underscore = 30;
 };
@@ -15341,7 +15407,9 @@ ampersand = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
-"@MMK_R_el-cy" = -50;
+"@MMK_R_be-cy" = 5;
+"@MMK_R_che-cy" = 20;
+"@MMK_R_el-cy" = -30;
 "@MMK_R_period" = -120;
 ampersand = -20;
 };
@@ -15416,9 +15484,12 @@ underscore = -10;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 30;
+"@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -80;
 "@MMK_R_quoteright" = 40;
+"@MMK_R_u-cy" = 50;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -15489,7 +15560,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_period" = -110;
 "@MMK_R_quoteright" = 40;
@@ -15554,7 +15625,9 @@ germandbls.sc = -30;
 "@MMK_L_X" = {
 "@MMK_R_O" = -10;
 "@MMK_R_S" = -10;
+"@MMK_R_che-cy" = -10;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 15;
 "@MMK_R_o" = -10;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w" = -30;
@@ -16072,6 +16145,7 @@ question.sc = 30;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 20;
 "@MMK_R_el-cy" = 25;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_hardsign-cy" = -10;
@@ -16085,6 +16159,7 @@ question.sc = 30;
 "@MMK_R_x" = 10;
 "@MMK_R_ze-cy" = 10;
 "@MMK_R_zhe-cy" = 20;
+slash = 60;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -16107,7 +16182,7 @@ underscore = 80;
 "@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -15;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -60;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_ze-cy" = -10;
@@ -16628,9 +16703,12 @@ ymod = {
 "@MMK_R_Ze-cy" = -20;
 "@MMK_R_Zhe-cy" = 35;
 "@MMK_R_a-cy" = -20;
+"@MMK_R_be-cy" = -5;
 "@MMK_R_c.sc" = -20;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_che-cy" = -30;
 "@MMK_R_copyright" = -50;
+"@MMK_R_el-cy" = 10;
+"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_izhitsa-cy" = -50;
 "@MMK_R_komizje-cy" = -30;
 "@MMK_R_o" = -10;
@@ -16663,6 +16741,8 @@ v = -45;
 "@MMK_R_W" = -30;
 "@MMK_R_X" = -20;
 "@MMK_R_Y" = -40;
+"@MMK_R_che-cy" = 40;
+"@MMK_R_hardsign-cy" = 20;
 "@MMK_R_quoteright" = -20;
 "@MMK_R_w" = -10;
 "@MMK_R_y" = -20;
@@ -16675,11 +16755,13 @@ v = -45;
 "@MMK_R_Ia-cy" = -10;
 "@MMK_R_U-cy" = -30;
 "@MMK_R_Zhe-cy" = -10;
-"@MMK_R_che-cy" = -20;
+"@MMK_R_be-cy" = 20;
+"@MMK_R_che-cy" = 10;
 "@MMK_R_colon" = -20;
-"@MMK_R_el-cy" = -20;
+"@MMK_R_el-cy" = 5;
 "@MMK_R_exclam" = -10;
 "@MMK_R_hardsign-cy" = -10;
+"@MMK_R_hyphen" = 20;
 "@MMK_R_ia-cy" = -20;
 "@MMK_R_question" = -20;
 "@MMK_R_quoteleft" = -20;
@@ -16690,6 +16772,8 @@ underscore = -10;
 "@MMK_L_C" = {
 "@MMK_R_O" = -10;
 "@MMK_R_c.sc" = -20;
+"@MMK_R_che-cy" = 40;
+"@MMK_R_el-cy" = 20;
 ampersand = -20;
 };
 "@MMK_L_Cheabkhasian-cy" = {
@@ -16706,12 +16790,13 @@ ampersand = -20;
 "@MMK_R_De-cy" = 15;
 "@MMK_R_Ef-cy" = -20;
 "@MMK_R_Ia-cy" = 20;
-"@MMK_R_el-cy" = -10;
+"@MMK_R_el-cy" = 10;
 "@MMK_R_ge-cy" = -10;
-"@MMK_R_hardsign-cy" = -10;
 "@MMK_R_ia-cy" = -10;
+"@MMK_R_o" = -10;
 "@MMK_R_parenright" = 10;
 "@MMK_R_slash" = 20;
+"@MMK_R_u-cy" = 20;
 "@MMK_R_ze-cy" = -10;
 underscore = 30;
 };
@@ -16719,6 +16804,8 @@ underscore = 30;
 "@MMK_R_V" = -20;
 "@MMK_R_W" = -20;
 "@MMK_R_Y" = -20;
+"@MMK_R_che-cy" = 30;
+"@MMK_R_el-cy" = 10;
 };
 "@MMK_L_Ef-cy" = {
 "@MMK_R_Che-cy" = -30;
@@ -17308,7 +17395,9 @@ ampersand = -20;
 "@MMK_R_a-cy" = -50;
 "@MMK_R_a.sc" = -60;
 "@MMK_R_ae.sc" = -80;
-"@MMK_R_el-cy" = -50;
+"@MMK_R_be-cy" = 10;
+"@MMK_R_che-cy" = 40;
+"@MMK_R_el-cy" = -40;
 "@MMK_R_period" = -120;
 ampersand = -20;
 };
@@ -17382,10 +17471,14 @@ underscore = -10;
 "@MMK_R_a" = -30;
 "@MMK_R_a.sc" = -40;
 "@MMK_R_ae.sc" = -50;
+"@MMK_R_be-cy" = 30;
 "@MMK_R_c.sc" = -10;
+"@MMK_R_che-cy" = 70;
+"@MMK_R_el-cy" = -30;
 "@MMK_R_o" = -30;
 "@MMK_R_period" = -80;
 "@MMK_R_quoteright" = 40;
+"@MMK_R_u-cy" = 70;
 ampersand = -20;
 germandbls.sc = -30;
 napostrophe = 50;
@@ -17456,7 +17549,7 @@ ampersand = -20;
 "@MMK_R_ge-cy" = -30;
 "@MMK_R_guilsinglright" = -40;
 "@MMK_R_hyphen" = -20;
-"@MMK_R_ia-cy" = -20;
+"@MMK_R_ia-cy" = -30;
 "@MMK_R_o" = -60;
 "@MMK_R_parenright" = 10;
 "@MMK_R_period" = -110;
@@ -17523,6 +17616,7 @@ germandbls.sc = -30;
 "@MMK_R_O" = -10;
 "@MMK_R_S" = -10;
 "@MMK_R_copyright" = -40;
+"@MMK_R_el-cy" = 15;
 "@MMK_R_o" = -10;
 "@MMK_R_t.sc" = -20;
 "@MMK_R_w" = -30;
@@ -18046,6 +18140,7 @@ question.sc = 30;
 "@MMK_R_U-cy" = -15;
 "@MMK_R_Zhe-cy" = 70;
 "@MMK_R_che-cy" = -10;
+"@MMK_R_colon" = 20;
 "@MMK_R_el-cy" = 30;
 "@MMK_R_guilsinglright" = 15;
 "@MMK_R_hardsign-cy" = -10;
@@ -18060,6 +18155,7 @@ question.sc = 30;
 "@MMK_R_x" = 20;
 "@MMK_R_ze-cy" = 15;
 "@MMK_R_zhe-cy" = 20;
+slash = 70;
 underscore = 80;
 };
 "@MMK_L_two" = {
@@ -18082,7 +18178,7 @@ underscore = 80;
 "@MMK_R_ia-cy" = -10;
 "@MMK_R_o" = -30;
 "@MMK_R_parenright" = -10;
-"@MMK_R_period" = -20;
+"@MMK_R_period" = -70;
 "@MMK_R_question" = -20;
 "@MMK_R_slash" = -20;
 "@MMK_R_ze-cy" = -10;
