yi-cy.calt update for Ukrainian support

--- a/sources/NotoSerif.glyphspackage/order.plist
+++ b/sources/NotoSerif.glyphspackage/order.plist
@@ -3369,6 +3369,7 @@ uniA7F4,
 "De-cy.loclBGR",
 "El-cy.loclBGR",
 "Ef-cy.loclBGR",
+"yi-cy.calt",
 "ve-cy.loclBGR",
 "ge-cy.loclBGR",
 "de-cy.loclBGR",
